--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.1.6",
     "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.7",
     "@types/react": "19.0.7",
-    "eslint": "^9",
+    "eslint": "^9.20.0",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
