--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,24 @@
 {
   "name": "Streaming History Analyzer",
-  "short_name": "Cakeculator",
+  "short_name": "cakeculator",
   "description": "Analyze your music streaming history in depth",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
+  "orientation": "any",
   "icons": [
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-512x512.png", 
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
