--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Streaming History Analyzer",
-  "short_name": "cakeculator",
+  "short_name": "Music Stats",
   "description": "Analyze your music streaming history in depth",
   "start_url": "/",
   "display": "standalone",
@@ -8,6 +8,12 @@
   "theme_color": "#000000",
   "orientation": "any",
   "icons": [
+    {
+      "src": "/icon-180x180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
@@ -17,6 +23,12 @@
     {
       "src": "/icon-512x512.png", 
       "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-1024x1024.png", 
+      "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "any maskable"
     }
