--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "lodash": "^4.17.21",
